crates/es-fluent-derive/tests/ui/enum_only_keys_on_struct.rs
use es_fluent_derive::EsFluent;

#[derive(EsFluent)]
#[fluent(domain = "auth")]
pub struct DomainOnStruct {
    value: String,
}

#[derive(EsFluent)]
#[fluent(resource = "auth_error")]
pub struct ResourceOnStruct {
    value: String,
}

fn main() {}
